# openbuildings

./: .Rbuildignore  .gitignore  CLAUDE.md  DESCRIPTION  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
R/: bing.R  bing2.R  google.R  main.R  osm.R
backend/app/: main.py
backend/app/api/: buildings.py
backend/app/core/: config.py  duckdb.py  queries.py
backend/app/models/: schemas.py
backend/scripts/: build_index.py
backend/tests/: test_api.py  test_duckdb.py  test_queries.py
docs/plans/: 2026-02-26-v2-rewrite.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  editable-layers.d.ts
frontend/src/components/: AreaSelector.tsx  DataSummary.tsx  DrawControl.tsx  MapView.tsx  MiniGlobe.tsx
frontend/src/hooks/: useMapState.ts
frontend/src/types/: index.ts
man/: download_and_uncompress_buildings_data.Rd  download_buildings.Rd  download_google_open_buildings.Rd  download_osm_buildings.Rd  get_open_buildings_region_code.Rd
vignettes/: getting-started.Rmd
